codepkg/objects/EMMIE_Project_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Applicant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CAT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CND_CHNG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CND_CHNG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPLT__c</fullName>
        <label>%CPLT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enviro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enviro</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Determination__c</fullName>
        <formula>IF( Review_Status__c != &apos;Awarded&apos;, &apos;No FEMA Determination&apos;, &apos;FEMA Determination&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEMA Determination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Share_Percent__c</fullName>
        <label>Fed_%Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Share__c</fullName>
        <label>Fed_$Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fema_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fema_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fema_Time_Ext__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fema_Time_Ext</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fin_Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fin_Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fld_Pln__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fld_Pln</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historic</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Init_Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Init_Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insured</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Amount_Cascaded_On_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as a flag to convey that Amount field is copied respective Project.
TRUE :  Amount field is copied to respective Project.
FALSE :  Amount field is not copied to respective Project.</description>
        <label>Is Amount Cascaded On Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Closed_Project__c</fullName>
        <formula>IF( ISNULL(Closed__c), &apos;Open&apos;, &apos;Closed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Obligated_Project__c</fullName>
        <formula>IF( ISNULL(Obligated__c), &apos;Not Obligated&apos;, &apos;Obligated&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Obligated Project?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LRG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LRG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obligated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obligated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oes_Time_Ext__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oes_Time_Ext</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKG_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PKG_Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PKG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PKG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PW__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PW</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pristine__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pristine</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Protected</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>REF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SITES</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TYPE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X406_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>406_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X406_Proposed__c</fullName>
        <label>406_$Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X406_Scope__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>406_Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X406_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>406_Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X406__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>406</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>EMMIE Project Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PW__c</columns>
        <columns>VER__c</columns>
        <columns>Amount__c</columns>
        <columns>DR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMMIE Projects Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>